Fix: fixed text of name

--- a/src/pages/meesage.html
+++ b/src/pages/meesage.html
@@ -29,7 +29,7 @@
       </div>
       <div class="main">
         <form class="form-block">
-          <input type="text" id="channelId" placeholder="Channel Id" name="ChannelId">
+          <input type="text" id="channelId" placeholder="Channel Id" name="channel_id">
           <input type="text" id="message" placeholder="Message" name="message">
         </form>
       </div>
