Update: added getting all messages

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -35,5 +35,7 @@
       </ul>
       <a href="meesage.html" class="button-add">Add new message</a>
     </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
