Update: added showing messages

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,15 +24,7 @@
   </head>
   <body>
     <div class="container">
-      <ul>
-        <li>
-          <p class="title">Message 1</p>
-          <div class="home__buttons-group">
-            <a class="button button-edit">Edit</a>
-            <a class="button button-delete">Delete</a>
-          </div>
-        </li>
-      </ul>
+      <ul id="message-list"></ul>
       <a href="meesage.html" class="button-add">Add new message</a>
     </div>
 
