--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -25,7 +25,7 @@
   <body>
     <div class="container">
       <ul id="message-list"></ul>
-      <a href="meesage.html" class="button-add">Add new message</a>
+      <a href="message.html" class="button-add">Add new message</a>
     </div>
 
     <script src="./scripts/index.js"></script>
