Fix: fixed return a data

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -23,11 +23,15 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <ul id="message-list"></ul>
-      <a href="message.html" class="button-add">Add new message</a>
+    <div class="grid-container">
+      <div class="header"></div>
+      <div class="main">
+        <ul id="message-list"></ul>
+      </div>
+      <div class="footer">
+        <a href="message.html" class="button-add">Add new message</a>
+      </div>
     </div>
-
     <script src="./scripts/index.js"></script>
   </body>
 </html>
