--- a/src/pages/message.html
+++ b/src/pages/message.html
@@ -21,6 +21,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="message.css" />
   </head>
   <body>
     <div class="grid-container">
